	for GTK_IS_UI_MANAGER(self).

2004-12-01  Dom Lachowicz <cinamod@hotmail.com>

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc: use MS Windows button order, not Gnome HIG order
	* modules/engines/ms-windows/msw_style.c (draw_handle): Draw XP toolbar grippie handle properly
	(draw_resize_grip): Draw XP status bar grippie handle properly

2004-11-30  Dom Lachowicz <cinamod@hotmail.com>

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc: MS Windows menus should not have tearoffs

Tue Nov 30 17:53:37 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtksequence.c (node_compare): Assign an arbitrary, but
	consistent, order to nodes that the user function compares as
	equal. Better fix for bug #157670 and a better way to make sorting
	stable.

2004-11-30  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkpixmap-win32.c : remove the disputable memset at 
	the end of gdk_pixmap_new() - on X11 the bits are not initialized 
	either - fixes bug #145107

	* gtk/gtkfilesystemwin32.c : add an idle handler to emit "volumes-changed"
	when drives are plugged in or removed. Fixes bug #137815

2004-11-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreesortable.c (gtk_tree_sortable_get_sort_column_id): Update 
	the documentation to specify a more useful behaviour, which can be
	implemented with the multiple special values we have now.  (#159984,
	Nicholas Rahn)

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_get_sort_column_id): 
	* gtk/gtktreestore.c (gtk_tree_store_get_sort_column_id): 
	* gtk/gtkliststore.c (gtk_list_store_get_sort_column_id): Update the
	implementations.

Tue Nov 30 16:25:29 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextdisplay.c (render_para): Don't paint in the
	trailing end of a wrapped line when the selection 
	starts after the line. (#160000, Matthias Clasen)

	* gtk/gtktextdisplay.c (gtk_text_layout_draw): pass in byte_count + 1 
	for selection_end index when the selection end is past the end of the 